variables.Variables.scala.error
Compilation error:
Variables:4: error: reassignment to val
  pas = 1 + pas;
      ^